fix some bugs to make enumeration harder
